Lowering cases of the library file.

--- a/example.html
+++ b/example.html
@@ -3,11 +3,11 @@
 	<header>
 		<meta charset="utf-8" />
 		<title>ReferrerKiller demo</title>
-		<script src="ReferrerKiller.js"></script>
+		<script src="referrer-killer.js"></script>
 	</header>
 	<body>
 		<h1>Demonstration of how to prevent your browser of sending the referrer http header.</h1>
-		<h3>Check the hack's source code <a href="ReferrerKiller.js">here</a>.</h3>
+		<h3>Check the hack's source code <a href="referrer-killer.js">here</a>.</h3>
 		<h2>Links</h2>
 		<ul>
 			<li>Not sending referrer <span id="url_kill_referrer"></span></li>
