Fixing example for images

--- a/example.html
+++ b/example.html
@@ -17,13 +17,13 @@
 	<script>
 		document.getElementById('url_kill_referrer').innerHTML = ReferrerKiller.linkHtml( 'http://www.xhaus.com/headers', 'http://www.xhaus.com/headers', { target: 'destiny' }, { verticalAlign: 'bottom' } );
 	</script>
-	<h2>Image uploaded to pixhost</h2>
+	<h2>Image https://zy8u9nh9x0.execute-api.eu-west-1.amazonaws.com/prod/referrer/image</h2>
 	<ul>
 		<li>Without sending referrer: <br/> <span id="image_kill_referrer"></span></li>
-		<li>Sending referrer: <br/> <img src="http://img4.pixhost.org/images/1693/14341576_a_fun.jpg" /></li>
+		<li>Sending referrer: <br/> <img src="https://zy8u9nh9x0.execute-api.eu-west-1.amazonaws.com/prod/referrer/image?a" /></li>
 	</ul>
 	<script>
-		document.getElementById('image_kill_referrer').innerHTML = ReferrerKiller.imageHtml('http://img3.pixhost.org/images/2669/14341603_a_fun.jpg');
+		document.getElementById('image_kill_referrer').innerHTML = ReferrerKiller.imageHtml('https://zy8u9nh9x0.execute-api.eu-west-1.amazonaws.com/prod/referrer/image?b');
 	</script>
 </body>
 </html>
